Fix alignment of the ingredients card

--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -138,7 +138,6 @@ $step-breakpoint: 800px;
   }
 
   .recipe-ingredients-card {
-    flex-basis: 300px;
     margin-left: auto;
     margin-right: auto;
 
